tests/diagnostics_golden/diag_rule5_infinity.txt
Diagnostics Golden: Rule5 Infinity
Source: tests/negative/neg_rule5_infinity.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_rule5_infinity.safe:19:14: error: floating expression may be infinite at narrowing
  |
  | 19 |       return bounded_float (big / small);  -- ERROR: result may be infinity
  |    |              ^~~~~~~~~~~~~~~~~~~~~~~~~~~
  |

------------------------------------------------------------------------
